--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="flex justify-between p-4 lg:px-15 border-b border-b-black/15">
         <!-- LOGO -->
         <div class="flex items-center gap-3">
-            <div onclick="abrirMenu()">
+            <div onclick="abrirMenu()" class="lg:hidden">
                 <box-icon name="menu"></box-icon>
             </div>
             <div class="w-9 h-9 bg-laranja rounded flex justify-center items-center">
