ajustes de tela

--- a/cadastro.html
+++ b/cadastro.html
@@ -45,7 +45,7 @@
             class="w-full h-10 mb-4 border rounded border-black/15 pl-3 focus:outline focus:border-black focus:outline-offset-1 ">
 
 
-            <button class=" w-full h-10 bg-laranja mt-10 rounded text-white hover:bg-orange-800 hover:border hover:border-gray-800 hover:bg-white hover:text-laranja cursor-pointer text-xl mb-4 duration-200">entrar</button>
+            <button class=" w-full h-10 bg-laranja mt-10 rounded text-white hover:bg-orange-800 hover:border hover:border-gray-800 hover:text-laranja cursor-pointer text-xl mb-4 duration-200">entrar</button>
 
     
     </form>
