--- a/recuperar.html
+++ b/recuperar.html
@@ -45,7 +45,7 @@
 
 
         <button
-            class=" w-full h-10 bg-laranja rounded text-white hover:bg-orange-800 hover:border hover:border-gray-800 hover:bg-white hover:text-laranja cursor-pointer text-xl mb-4 duration-200">enviar</button>
+            class=" w-full h-10 bg-laranja rounded text-white hover:bg-orange-800 hover:border hover:border-gray-800 hover:text-laranja cursor-pointer text-xl mb-4 duration-200">enviar</button>
 
 
     </form>
